<resources>
    <string name="app_name">QuizApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="openQuiz">Open quizzes</string>
    <string name="ratingString">Show Rating</string>
    <string name="settingsString">Settings</string>
    <string name="exitString">Exit</string>
    <string name="createQuiz">Create</string>
    <string name="myQuizzes">My Quizzes</string>
    <string name="allQuizzes">All Quizzes</string>
    <string name="quizStartImage">Start Image</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="quiz_name_textholder">Quiz Name</string>
    <string name="quiz_description_textholder">Description</string>
    <string name="add_question_button">Add Question</string>
    <string name="IsAnswer">Is Answer</string>
    <string name="EnterYourAnswer">Enter Your Answer</string>
    <string name="enterYourQuestion">Enter your question</string>
    <string name="endTest">End Test</string>
</resources>