<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/exitString"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="0dp"
        android:layout_height="498dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIdTextView">

        <Button
            android:id="@+id/quizListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openQuiz" />

        <Button
            android:id="@+id/ratingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingString" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsString" />

    </LinearLayout>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:screenReaderFocusable="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollHorizontally="false"
        android:text="UserName"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userIdTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="monospace"
        android:text="Id"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>